--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,6 +1,1 @@
-sonar.projectKey=first
-sonar.sources=.
-sonar.host.url=http://localhost:9001
-sonar.login=admin
-sonar.password=admin1
-sonar.exclusions=**/tests/**, **/__pycache__/**, **/env/**
+sonar.projectKey=Folder-Watcher
