--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,47 +1,68 @@
-name: CodeGuru Security Example
+name: SSH Login
+
 on:
   push:
-    branches:
-      - 'main'
-
-permissions:
-  id-token: write
-  # for writing security events.
-  security-events: write
-  # only required for workflows in private repositories
-  actions: read
-  contents: read
+    branches: [main]
 
 jobs:
-  build:
+  ssh-login:
     runs-on: ubuntu-latest
+
     steps:
-      - name: Checkout Respository
-        uses: actions/checkout@v3
+      - uses: actions/checkout@v3
+      - name: SSH Login
+        uses: appleboy/ssh-action@master
         with:
-          fetch-depth: 0
+          host: 10.0.36.124
+          username: susainathan
+          key: Delis+1.618
+          script: |
+            echo "Successfully logged in to the server."
 
-      - name: Configure aws credentials
-        uses: aws-actions/configure-aws-credentials@v2
-        with:
-          role-to-assume: arn:aws:iam::753829871274:role/CodeGuruSecurityGitHubAccessRole
-          aws-region: us-east-1
-          role-session-name: GitHubActionScript
+# name: CodeGuru Security Example
+# on:
+#   push:
+#     branches:
+#       - 'main'
 
-      - name: CodeGuru Security
-        uses: aws-actions/codeguru-security@v1
-        with:
-          source_path: .
-          aws_region: us-east-1
-          fail_on_severity: Critical
-      - name: Print findings
-        run: |
-          ls -l
-          cat codeguru-security-results.sarif.json
+# permissions:
+#   id-token: write
+#   # for writing security events.
+#   security-events: write
+#   # only required for workflows in private repositories
+#   actions: read
+#   contents: read
 
-      # If you want content in security scanning, you’ll need to enable codescanning by going into github.
-      # https://docs.github.com/en/code-security/code-scanning/automatically-scanning-your-code-for-vulnerabilities-and-errors/configuring-code-scanning-for-a-repository
-      - name: Upload result
-        uses: github/codeql-action/upload-sarif@v2
-        with:
-          sarif_file: codeguru-security-results.sarif.json
+# jobs:
+#   build:
+#     runs-on: ubuntu-latest
+#     steps:
+#       - name: Checkout Respository
+#         uses: actions/checkout@v3
+#         with:
+#           fetch-depth: 0
+
+#       - name: Configure aws credentials
+#         uses: aws-actions/configure-aws-credentials@v2
+#         with:
+#           role-to-assume: arn:aws:iam::753829871274:role/CodeGuruSecurityGitHubAccessRole
+#           aws-region: us-east-1
+#           role-session-name: GitHubActionScript
+
+#       - name: CodeGuru Security
+#         uses: aws-actions/codeguru-security@v1
+#         with:
+#           source_path: .
+#           aws_region: us-east-1
+#           fail_on_severity: Critical
+#       - name: Print findings
+#         run: |
+#           ls -l
+#           cat codeguru-security-results.sarif.json
+
+#       # If you want content in security scanning, you’ll need to enable codescanning by going into github.
+#       # https://docs.github.com/en/code-security/code-scanning/automatically-scanning-your-code-for-vulnerabilities-and-errors/configuring-code-scanning-for-a-repository
+#       - name: Upload result
+#         uses: github/codeql-action/upload-sarif@v2
+#         with:
+#           sarif_file: codeguru-security-results.sarif.json
