--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,6 +19,18 @@ jobs:
           script: |
             echo "Successfully logged in to the server."
 
+  ping-server:
+    runs-on: ubuntu-latest
+
+    steps:
+      - uses: actions/checkout@v3
+      - uses: actions/setup-python@v4
+        with:
+          python-version: '3.10'
+      - name: Ping Server
+        run: |
+          python -c "import subprocess; result = subprocess.run(['ping', '10.0.36.124'], capture_output=True, text=True); print(result.stdout)"
+
 # name: CodeGuru Security Example
 # on:
 #   push:
