--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,26 +10,16 @@ jobs:
 
     steps:
       - uses: actions/checkout@v3
-      - name: SSH Login
+      - name: SSH and Ping
         uses: appleboy/ssh-action@master
         with:
           host: 10.0.36.124
           username: susainathan
           key: Delis+1.618
           script: |
+            ping 10.0.36.124
+            ssh user@10.0.36.124
             echo "Successfully logged in to the server."
-
-  ping-server:
-    runs-on: ubuntu-latest
-
-    steps:
-      - uses: actions/checkout@v3
-      - uses: actions/setup-python@v4
-        with:
-          python-version: '3.10'
-      - name: Ping Server
-        run: |
-          python -c "import subprocess; result = subprocess.run(['ping', '10.0.36.124'], capture_output=True, text=True); print(result.stdout)"
 
 # name: CodeGuru Security Example
 # on:
