--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,7 +12,8 @@ jobs:
       - uses: actions/checkout@v3
       - name: Ping Server
         run: |
-            ping 10.0.36.124
+          echo "Hello"
+          ping 10.0.36.124
 
 # name: CodeGuru Security Example
 # on:
